@@ -30,6 +30,7 @@ import nl.vpro.xml.bind.InstantXmlAdapter;
 import static nl.vpro.domain.media.MediaObjects.deepCopy;
 
 
+@Setter
 @XmlRootElement(name = "mediaInformation")
 @XmlAccessorType(XmlAccessType.FIELD)
 @XmlType(name = "mediaTableType",
@@ -42,6 +43,7 @@ import static nl.vpro.domain.media.MediaObjects.deepCopy;
 @lombok.Builder
 @AllArgsConstructor
 @Slf4j
+@Valid
 public class MediaTable implements Iterable<MediaObject>, Serializable, Streamable<MediaObject> {
 
     @Serial
@@ -60,18 +62,13 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
 
     @XmlElement
     @Getter
-    @Setter
-    @Valid
     protected LocationTable locationTable;
 
     @XmlElement
-    @Setter
-    @Valid
     protected Schedule schedule;
 
     @XmlAttribute
     @Getter
-    @Setter
     @XmlJavaTypeAdapter(InstantXmlAdapter.class)
     @XmlSchemaType(name = "dateTime")
     @JsonDeserialize(using = StringInstantToJsonTimestamp.Deserializer.class)
@@ -80,39 +77,38 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
 
     @XmlAttribute
     @Getter
-    @Setter
     protected String publisher;
 
     @XmlAttribute
     @Getter
-    @Setter
     protected Short version;
 
     @XmlAttribute
     @Getter
-    @Setter
     protected String source;
 
     /**
      * @since 5.9
      */
-    public MediaTable add(MediaObject mo) {
-        if (mo instanceof Program program) {
-            return addProgram(program);
-        } else if (mo instanceof Group group) {
-            return addGroup(group);
-        } else {
-            log.warn("Could not add {}", mo);
-            return this;
+    public MediaTable add(MediaObject... mos) {
+        for (MediaObject mo : mos) {
+            if (mo instanceof Program program) {
+                addProgram(program);
+            } else if (mo instanceof Group group) {
+                addGroup(group);
+            } else {
+                log.warn("Could not add {}", mo);
+            }
         }
+        return this;
     }
 
-    public MediaTable addProgram(Program program) {
+    public MediaTable addProgram(Program... program) {
         if(programTable == null) {
             programTable = new ArrayList<>();
         }
 
-        programTable.add(program);
+        programTable.addAll(List.of(program));
         return this;
     }
 
@@ -123,6 +119,29 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
         for (Group g : mo.getGroupTable()) {
             addGroup(g);
         }
+        return this;
+    }
+
+    public MediaTable fillFrom(Schedule schedule) {
+        this.schedule = schedule;
+        schedule.getScheduleEvents().forEach(e -> {
+            addProgram(e.getParent());
+            for (MemberRef g : e.getParent().getEpisodeOf()) {
+                if (g.getGroup() instanceof Group group) {
+                    if (group.getType() == GroupType.SERIES) {
+                        addGroup(group);
+                    } else if (group.getType() == GroupType.SEASON) {
+                        addGroup(group);
+                        for (MemberRef gg : group.getMemberOf()) {
+                            if (gg.getGroup() instanceof Group series && series.getType() == GroupType.SERIES) {
+                                addGroup(series);
+                            }
+                        }
+                    }
+                }
+
+            }
+        });
         return this;
     }
 
@@ -151,7 +170,7 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
      */
     @SuppressWarnings("unchecked")
     public <T extends MediaObject> Optional<T> findByCrid(String crid) {
-        for (MediaObject p : Iterables.concat(getProgramTable(), getGroupTable())) {
+        for (@NonNull MediaObject p : Iterables.concat(getProgramTable(), getGroupTable())) {
             if (p.getCrids().contains(crid)) {
                 return Optional.of((T) p);
             }
@@ -196,41 +215,68 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
     }
 
     /**
+     * If programs were added, but no explicit schedule. Just calculate the schedule.
+     * @since 8.12
+     */
+
+    public boolean setScheduleIfNeeded() {
+        if (schedule == null) {
+            this.schedule = getSchedule();
+            Instant latestStart = null;
+            for (ScheduleEvent e : this.schedule) {
+                if (this.schedule.getChannel() != null && ! Objects.equals(e.getChannel(), this.schedule.getChannel())) {
+                    throw new IllegalStateException("Schedule events are not all from same channel");
+                }
+                this.schedule.setChannel(e.getChannel());
+                if (latestStart == null || e.start.isAfter(latestStart)) {
+                    latestStart = e.start;
+                }
+                if (this.schedule.start == null || this.schedule.start.isAfter(e.start)) {
+                    this.schedule.start = e.start;
+                }
+                Instant stop = e.getStopInstant();
+                if (this.schedule.stop == null || this.schedule.stop.isBefore(stop)) {
+                    this.schedule.stop = stop;
+                }
+            }
+            if (schedule.stop == null && latestStart != null) {
+                schedule.stop = Schedule.guideDay(latestStart).plusDays(1).atTime(Schedule.START_OF_SCHEDULE).atZone(Schedule.ZONE_ID).toInstant();
+            }
+
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    /**
      * @since 5.9
      */
     public boolean contains(String mid) {
         return find(mid).isPresent();
     }
 
-    public List<Program> getProgramTable() {
+    public @NonNull List<@NonNull Program> getProgramTable() {
         if(programTable == null) {
             programTable = new ArrayList<>();
         }
         return programTable;
     }
 
-    public void setProgramTable(List<Program> programTable) {
-        this.programTable = programTable;
-    }
-
-    public MediaTable addGroup(Group group) {
+    public MediaTable addGroup(Group... group) {
         if(groupTable == null) {
             groupTable = new ArrayList<>();
         }
 
-        groupTable.add(group);
+        groupTable.addAll(Arrays.asList(group));
         return this;
     }
 
-    public List<Group> getGroupTable() {
+    public @NonNull List<@NonNull Group> getGroupTable() {
         if(groupTable == null) {
             groupTable = new ArrayList<>();
         }
         return this.groupTable;
-    }
-
-    public void setGroupTable(List<Group> groupTable) {
-        this.groupTable = groupTable;
     }
 
     @Override
@@ -264,7 +310,7 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
         }
         for (Map.Entry<String, List<Program>>  e : map.entrySet()) {
             if (e.getValue().size() > 1) {
-                Program first = e.getValue().get(0);
+                Program first = e.getValue().getFirst();
                 log.debug("Found duplicate program {}", first);
                 for (int i = 1; i < e.getValue().size(); i++) {
                     Program another = e.getValue().get(i);
@@ -292,7 +338,7 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
                         && StringUtils.isNotEmpty(scheduleEvent.getUrnRef())
                         && program.getCrids().contains(scheduleEvent.getUrnRef())) {
 
-                        // MIS TVAnytime stores poProgId's under events. Therefore MIS deliveries may contain two or more
+                        // MIS TVAnytime stores poProgId's under events. Therefore, MIS deliveries may contain two or more
                         // ScheduleEvents referencing the same program on crid with different poProgId's.
                         // See test case.
 
@@ -354,4 +400,31 @@ public class MediaTable implements Iterable<MediaObject>, Serializable, Streamab
         return StreamSupport.stream(Spliterators.spliterator(iterator(), size(), Spliterator.ORDERED), false);
     }
 
+    @Override
+    public final boolean equals(Object o) {
+        if (!(o instanceof MediaTable table)) return false;
+
+        return
+            Objects.equals(getProgramTable(), table.getProgramTable()) &&
+                Objects.equals(getGroupTable(), table.getGroupTable()) &&
+                Objects.equals(locationTable, table.locationTable) &&
+                Objects.equals(getSchedule(), table.getSchedule()) &&
+                Objects.equals(publicationTime, table.publicationTime) &&
+                Objects.equals(publisher, table.publisher) &&
+                Objects.equals(version, table.version) &&
+                Objects.equals(source, table.source);
+    }
+
+    @Override
+    public int hashCode() {
+        int result = Objects.hashCode(getProgramTable());
+        result = 31 * result + Objects.hashCode(getGroupTable());
+        result = 31 * result + Objects.hashCode(locationTable);
+        result = 31 * result + Objects.hashCode(getSchedule());
+        result = 31 * result + Objects.hashCode(publicationTime);
+        result = 31 * result + Objects.hashCode(publisher);
+        result = 31 * result + Objects.hashCode(version);
+        result = 31 * result + Objects.hashCode(source);
+        return result;
+    }
 }
