@@ -6,7 +6,7 @@ import java.util.*;
 
 import jakarta.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 
-import com.neovisionaries.i18n.CountryCode;
+import org.meeuw.i18n.countries.codes.CountryCode;
 
 import nl.vpro.domain.media.bind.TvaCountryAdapter;
 
@@ -185,13 +185,13 @@ public enum TvaCountry {
 
     public String getIso3Code() {
         try {
-            return isoCode == null ? null : new Locale("en", isoCode).getISO3Country();
+            return isoCode == null ? null : Locale.of("en", isoCode).getISO3Country();
         } catch (MissingResourceException mrs) {
             return isoCode;
         }
     }
 
-    public static TvaCountry valueOf(CountryCode code) {
+    public static TvaCountry valueOf(org.meeuw.i18n.countries.codes.CountryCode code) {
         return valueOf(code.getAlpha2());
     }
 
