@@ -29,17 +29,22 @@ class UserServiceTest {
 
     private final UserService<User> userService = new UserService<>() {
         @Override
+        public String getDisplayId(Principal principal) {
+            return principal.getName();
+        }
+
+        @Override
         public boolean needsUpdate(User oldUser, User newUser) {
             return false;
         }
 
         @Override
-        public <S> S doAs(String principalId, Duration duration, Callable<S> handler) throws Exception {
+        public <S> S doAs(String principalId, Duration duration, Callable<S> handler) {
             return null;
         }
 
         @Override
-        public <S> S systemDoAs(String principalId, Callable<S> handler) throws Exception {
+        public <S> S systemDoAs(String principalId, Callable<S> handler) {
             return null;
         }
 
@@ -111,7 +116,7 @@ class UserServiceTest {
         Locale def = Locales.getDefault();
 
         List<CompletableFuture<?>> futures = new ArrayList<>();
-        try (AutoCloseable autoCloseable = Locales.with(new Locale("zh"))) {
+        try (AutoCloseable autoCloseable = Locales.with( Locale.of("zh"))) {
             for (int i = 0; i < 500; i++) {
                 int fi = i;
                 futures.add(userService.async(() -> {
